--- a/client/src/app/components/content-header/content-header.component.html
+++ b/client/src/app/components/content-header/content-header.component.html
@@ -1,4 +1,4 @@
-<div class="container-md mt-2 mb-2">
+<div class="container-md mt-2 mb-2 mt-3">
   <div class="row justify-content-md-center">
     <!-- Search Btn -->
     <div class="col-md-7 col-sm-12">
