--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap shadow p-0">
+<nav class="navbar navbar-dark fixed-top bg-dark shadow p-0 p-md-1">
   <!-- Logo -->
   <strong class="text-danger">Tailyn</strong>
   <!-- Menu Button -->
