--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -12,17 +12,15 @@ nav > strong
 {
     display: none;
     position: absolute;
-    justify-content: center;
-    align-items: center;
     border: 1px rgb(216, 216, 216) solid;
-    width: 32px;
-    height: 32px;
+    width: 28px;
+    height: 25px;
     cursor: pointer;
     right: 15px;
 }
 .menu-btn-burger
 {
-    width: 25px;
+    width: 22px;
     height: 3px;
     background-color: var(--white-color);
     border-radius: 5px;
@@ -33,7 +31,7 @@ nav > strong
 {
     content: '';
     position: absolute;
-    width: 25px;
+    width: 22px;
     height: 3px;
     background-color: var(--white-color);
     border-radius: 5px;
@@ -41,11 +39,11 @@ nav > strong
 }
 .menu-btn-burger::before
 {
-    transform: translateY(-10px);
+    transform: translateY(-8px);
 }
 .menu-btn-burger::after
 {
-    transform: translateY(10px);
+    transform: translateY(8px);
 }
 .menu-btn.open .menu-btn-burger
 {
@@ -65,9 +63,7 @@ nav > strong
 {
     nav
     {
-        height: 60px !important;
-        width: 100% !important;
-        z-index: 888 !important;
+        height: 40px;
     }
     nav > strong
     {
@@ -78,40 +74,39 @@ nav > strong
     //    1px -1px 0 rgb(121, 121, 121),
     //   -1px -1px 0 rgb(121, 121, 121);
     }
-
     .menu-btn
     {
         display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .show-sidebar
     {
         visibility: hidden;
-        top: 50px;
+        top: 30px;
         opacity: 0;
     }
     app-sidebar
     {
-        border-width: 5px 0px 30px 0px;
+        border-width: 4px 0px 0px 0px;
         border-style: solid;
-        border-color: rgba($color: #d2d2d2, $alpha: .5);
+        border-color: rgba($color: #000000, $alpha: 0.5);
         display: flex;
-        height: 100px;
+        height: 60px;
         opacity: 1;
-        top: 60px;
-        // transition: height 0ms 100ms, opacity 100ms 0ms;
+        top: 40px;
         position: fixed;
         visibility: visible;
         z-index: 999;        
+        // transition: height 0ms 100ms, opacity 100ms 0ms;
     }
     app-sidebar::before
     {
         content: '';
-        background-color: rgba($color: #d2d2d2, $alpha: .4);
+        background-color: rgba($color: #000000, $alpha: 0.5);
         width: 100%;
         height: 900px;
-        top: 160px;
         position: fixed;
-        z-index: 888;        
         transition: all 0.5s linear;
     }
 }
