--- a/client/src/app/components/sidebar/sidebar.component.scss
+++ b/client/src/app/components/sidebar/sidebar.component.scss
@@ -1,3 +1,8 @@
+/*** DropMenu Link ***/
+.header_DropMenu
+{
+    top: 20% !important;
+}
 .header_DropMenu button
 {
     position: relative;
@@ -24,6 +29,7 @@
     opacity: .8;
     right: 25%;
 }
+/*** Nav Link ***/
 .nav-item .nav-link
 {
     position: relative;
@@ -37,17 +43,22 @@
 {
     content: "";
     background-color: white;
-    left: 19%;
+    left: 16%;
     position: absolute;
     width: 55px;
-    height: 1px;
+    height: 2px;
     bottom: -4px;
     opacity: 0;
     transition: .5s;
 }
+.nav-item .nav-link.p-1::before
+{
+    left: 5%;
+    width: 70px;
+}
 .nav-item .nav-link:hover::before
 {
-    bottom: 8px;
+    bottom: 4px;
     opacity: 1;
 }
 /*** @media only screen ***/
@@ -82,16 +93,22 @@
     {
         position: fixed;
         z-index: 9999;
-        top: 1.2%;
-        right: 10%;
+        top: 0.8%;
+        right: 17%;
     }
     .sidebar ul:nth-child(2) li > div > div
     {
         border: white solid 1px;
     }
+    /*** Nav Link ***/
+    .nav-item .nav-link.p-1:hover::before
+    {
+        bottom: 1px;
+    }
 }
 @media (max-width: 575.99px)
 {
+    /*** sidebar ***/
     .sidebar
     {
         font-size: 12px;
@@ -112,5 +129,10 @@
         z-index: 9999;
         top: 1.3%;
         right: 12%;
+    }
+    /*** Nav Link ***/
+    .nav-item .nav-link.p-1::before
+    {
+        width: 60px;
     }
 }
