--- a/client/src/app/components/work/work.component.html
+++ b/client/src/app/components/work/work.component.html
@@ -21,8 +21,9 @@
   <div class="grid-body">
     <!-- <div class="grid-body"
     [ngStyle]="{'grid-template-rows': result_List.length ? 'repeat('+result_List.length+', 1fr)':'repeat(1, 1fr)'}"> -->
-    <div class="grid-content" *ngFor="let item of result_List; let i = index" (click)="user.e_Lv > 1 && choose(item)"
-      [ngClass]="{'grid-selected': item?.w_Id == fb_Value_Index[0]}">
+    <div *ngFor="let item of result_List; let i = index" (click)="user.e_Lv > 1 && choose(item)"
+      [ngClass]="{'grid-content': true, 'grid-selected': item?.w_Id == fb_Value_Index[0]}"
+      [ngStyle]="{'grid-column': win_Size ? 'span '+item.w_Quantity.split(',').length : 'span 1'}">
       <div>{{i+1}}</div>
       <div>
         <span>
@@ -184,7 +185,8 @@
       <!-- BMinute Start -->
       <div class="input-group input-group-sm col-md-6">
         <input type="datetime-local" id="SbMinute" step="3600" [min]="dateTime_Min" [max]="dateTime_Max"
-          class="form-control form-control-sm text-center" [value]="onValue('SbMinute')" (input)="onDate($event.target)">
+          class="form-control form-control-sm text-center" [value]="onValue('SbMinute')"
+          (input)="onDate($event.target)">
         <div class="input-group-prepend">
           <span class="input-group-text p-1">開始</span>
         </div>
@@ -192,7 +194,8 @@
       <!-- BMinute End -->
       <div class="input-group input-group-sm col-md-6">
         <input type="datetime-local" id="EbMinute" step="3600" [min]="dateTime_Min" [max]="dateTime_Max"
-          class="form-control form-control-sm text-center" [value]="onValue('EbMinute')" (input)="onDate($event.target)">
+          class="form-control form-control-sm text-center" [value]="onValue('EbMinute')"
+          (input)="onDate($event.target)">
         <div class="input-group-append">
           <span class="input-group-text p-1">結束</span>
         </div>
@@ -222,7 +225,8 @@
       <!-- OMinute Start -->
       <div class="input-group input-group-sm col-md-6">
         <input type="datetime-local" id="SoMinute" step="3600" [min]="dateTime_Min" [max]="dateTime_Max"
-          class="form-control form-control-sm text-center" [value]="onValue('SoMinute')" (input)="onDate($event.target)">
+          class="form-control form-control-sm text-center" [value]="onValue('SoMinute')"
+          (input)="onDate($event.target)">
         <div class="input-group-prepend">
           <span class="input-group-text p-1">開始</span>
         </div>
@@ -231,7 +235,8 @@
       <!-- OMinute End -->
       <div class="input-group input-group-sm col-md-6">
         <input type="datetime-local" id="EoMinute" step="3600" [min]="dateTime_Min" [max]="dateTime_Max"
-          class="form-control form-control-sm text-center" [value]="onValue('EoMinute')" (input)="onDate($event.target)">
+          class="form-control form-control-sm text-center" [value]="onValue('EoMinute')"
+          (input)="onDate($event.target)">
         <div class="input-group-append">
           <span class="input-group-text p-1">結束</span>
         </div>
@@ -239,69 +244,72 @@
     </div>
 
     <!-- FormArray -->
-    <div class="form-row border border-dark text-center mb-1"
-      *ngFor="let val of [].constructor(fb_Value['w_WorkOrder'].value.length) let i = index">
-      <div class="form-row col-12 position-relative">
-        <!-- Icon Btn Group -->
-        <div class="form-icon-group">
-          <!-- Badge Number -->
-          <b class="text-dark">{{i+1}}</b>
-          <!-- Icon Button -->
-          <i [ngClass]="['bi', i>0 ? 'text-danger bi-dash-square' : 'text-info bi-plus-square']"
-            [title]="i>0 ? '刪除':'新增'" (click)="update_FormArray(i)">
-          </i>
-        </div>
-        <!-- workOrder -->
-        <div class="form-group col mb-1" formArrayName="w_WorkOrder">
-          <label [class.text-danger]="errorValidators['w_WorkOrder'][i].length && true">
-            {{ errorValidators['w_WorkOrder'][i].length ? errorValidators['w_WorkOrder'][i] : "工單" }}
-          </label>
-          <input type="text" class="form-control form-control-sm text-center" [formControlName]="i" placeholder="工單"
-            (blur)="inputValidators(fbGroup, 'w_WorkOrder')">
-        </div>
-        <!-- Model -->
-        <div class="form-group col mb-1" formArrayName="w_Model">
-          <label [class.text-danger]="errorValidators['w_Model'][i].length && true">
-            {{ errorValidators['w_Model'][i].length ? errorValidators['w_Model'][i] : "機種" }}
-          </label>
-          <input type="text" class="form-control form-control-sm text-center" [formControlName]="i" placeholder="機種"
-            (blur)="inputValidators(fbGroup, 'w_Model')">
-        </div>
-        <!-- Stand -->
-        <div class="form-group col mb-1" formArrayName="w_Stand">
-          <label [class.text-danger]="errorValidators['w_Stand'][i].length && true">
-            {{ errorValidators['w_Stand'][i].length ? errorValidators['w_Stand'][i] : "站別" }}
-          </label>
-          <!-- <input class="form-control form-control-sm" [formControlName]="i" [attr.list]="'standtOptions'+i" id="stand"
+    <div class="items-scroll border border-dark">
+      <div class="form-row border border-dark text-center ml-0 mr-0 mt-1"
+        *ngFor="let val of [].constructor(fb_Value['w_WorkOrder'].value.length); let i = index;">
+        <div class="form-row col-12 text-center position-relative">
+          <!-- Icon Btn Group -->
+          <div class="form-icon-group">
+            <!-- Badge Number -->
+            <b class="text-dark">{{i+1}}</b>
+            <!-- Icon Button -->
+            <i [ngClass]="['bi', i>0 ? 'text-danger bi-dash-square' : 'text-info bi-plus-square']"
+              [title]="i>0 ? '刪除':'新增'" (click)="update_FormArray(i)">
+            </i>
+          </div>
+          <!-- workOrder -->
+          <div class="form-group col mb-1" formArrayName="w_WorkOrder">
+            <label [class.text-danger]="errorValidators['w_WorkOrder'][i].length && true">
+              {{ errorValidators['w_WorkOrder'][i].length ? errorValidators['w_WorkOrder'][i] : "工單" }}
+            </label>
+            <input type="text" class="form-control form-control-sm text-center" [formControlName]="i" placeholder="工單"
+              (blur)="inputValidators(fbGroup, 'w_WorkOrder')">
+          </div>
+          <!-- Model -->
+          <div class="form-group col mb-1" formArrayName="w_Model">
+            <label [class.text-danger]="errorValidators['w_Model'][i].length && true">
+              {{ errorValidators['w_Model'][i].length ? errorValidators['w_Model'][i] : "機種" }}
+            </label>
+            <input type="text" class="form-control form-control-sm text-center" [formControlName]="i" placeholder="機種"
+              (blur)="inputValidators(fbGroup, 'w_Model')">
+          </div>
+          <!-- Stand -->
+          <div class="form-group col mb-1" formArrayName="w_Stand">
+            <label [class.text-danger]="errorValidators['w_Stand'][i].length && true">
+              {{ errorValidators['w_Stand'][i].length ? errorValidators['w_Stand'][i] : "站別" }}
+            </label>
+            <!-- <input class="form-control form-control-sm" [formControlName]="i" [attr.list]="'standtOptions'+i" id="stand"
           placeholder="站別" (blur)="inputValidators(fbGroup, 'w_Stand')">
         <datalist [id]="'standtOptions'+i">
           <option *ngFor="let item of standList$ | async; index as i" [value]="item.s_Code"> {{item.s_Title}}
         </datalist> -->
-          <select id="lv" class="form-control text-center custom-select" [formControlName]="i"
-            (blur)="inputValidators(fbGroup, 'w_Stand')">
-            <option *ngFor="let item of standList$ | async; index as i" [value]="item.s_Code">
-              {{item.s_Code}} {{item.s_Title}}
-            </option>
-          </select>
+            <select id="lv" class="form-control form-control-sm text-center" [formControlName]="i"
+              (blur)="inputValidators(fbGroup, 'w_Stand')">
+              <option *ngFor="let item of client_List$ | async;"
+                [value]="item.c_Stand_Code+','+item.c_Stand">
+                 {{ item.c_Stand_Code }} {{ item.c_Stand }}
+              </option>
+            </select>
+          </div>
         </div>
-      </div>
 
-      <div class="form-row col-12 text-center">
-        <!-- Quantity -->
-        <div class="form-group col-2 mb-1" formArrayName="w_Quantity">
-          <label [class.text-danger]="errorValidators['w_Quantity'][i].length && true">
-            {{ errorValidators['w_Quantity'][i].length ? errorValidators['w_Quantity'][i] : "數量" }}
-          </label>
-          <input type="number" class="form-control form-control-sm text-center" step="1" min="0" max="999"
-            [formControlName]="i" (blur)="inputValidators(fbGroup, 'w_Quantity', i)">
-        </div>
-        <!-- Remark -->
-        <div class="form-group col-10 mb-1" formArrayName="w_Remark">
-          <label [class.text-danger]="errorValidators['w_Remark'][i].length && true">
-            {{ errorValidators['w_Remark'][i] ? errorValidators['w_Remark'][i] : "備註" }}
-          </label>
-          <input type="text" class="form-control form-control-sm text-center" [formControlName]="i" placeholder="備註"
-            (blur)="inputValidators(fbGroup, 'w_Remark')">
+        <div class="form-row col-12 text-center">
+          <!-- Quantity -->
+          <div class="form-group col-2 mb-1" formArrayName="w_Quantity">
+            <label [class.text-danger]="errorValidators['w_Quantity'][i].length && true">
+              {{ errorValidators['w_Quantity'][i].length ? errorValidators['w_Quantity'][i] : "數量" }}
+            </label>
+            <input type="number" class="form-control form-control-sm text-center" step="1" min="0" max="999"
+              [formControlName]="i" (blur)="inputValidators(fbGroup, 'w_Quantity', i)">
+          </div>
+          <!-- Remark -->
+          <div class="form-group col-10 mb-1" formArrayName="w_Remark">
+            <label [class.text-danger]="errorValidators['w_Remark'][i].length && true">
+              {{ errorValidators['w_Remark'][i] ? errorValidators['w_Remark'][i] : "備註" }}
+            </label>
+            <input type="text" class="form-control form-control-sm text-center" [formControlName]="i" placeholder="備註"
+              (blur)="inputValidators(fbGroup, 'w_Remark')">
+          </div>
         </div>
       </div>
     </div>
