--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
 <!-- /Header -->
 
 <!-- Main -->
-<div class="d-flex">
+<div>
     <!-- Loading -->
     <ng-container *ngIf="is_Loading">
         <app-loading></app-loading>
