--- a/client/src/app/components/content-header/content-header.component.html
+++ b/client/src/app/components/content-header/content-header.component.html
@@ -1,8 +1,8 @@
-<div class="container-md mt-2 mb-2 mt-3">
-  <div class="row justify-content-md-center">
+<div class="container-md mt-2 mb-2 mt-3 border border-secondary p-3">
+  <div class="row d-flex justify-content-between align-items-center">
     <!-- Search Btn -->
-    <div class="col-md-7 col-sm-12">
-      <div class="input-group input-group-sm mb-3">
+    <div class="col-md-7 col-sm-12 mb-3 mb-md-0">
+      <div class="input-group input-group-sm">
         <div class="input-group-prepend">
           <button type="button" class="btn btn-outline-secondary btn-sm" (click)="read()"
             [disabled]="!searchText.length && !delayTime">刷新</button>
@@ -38,4 +38,6 @@
     </ng-container>
     <!-- /Crud Btns -->
   </div>
+  
 </div>
+
