--- a/client/src/app/components/employee/employee.component.scss
+++ b/client/src/app/components/employee/employee.component.scss
@@ -1,20 +1,9 @@
 /** Grid Table ***/
 .grid-container
 {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 40px;
   justify-items: center;
-  align-items: stretch;
-  gap: 0.6em 0;
-  grid-template-areas:
-  "grid-header"
-  "grid-body";
-  height: 70vh;
-  font-size: 1em;
-  margin-top: 1rem;
 }
-.grid-container .grid-header
+.grid-header
 {
   display: grid;
   grid-template-columns: 30px 150px 200px 150px 150px 150px;
@@ -23,52 +12,12 @@
   font-weight: 600;
   // grid-auto-rows: 30px;
 }
-.grid-container .grid-header div
-{
-  background-color:rgb(246, 246, 246);
-}
-.grid-container > .grid-body
-{
-  display: grid;
-  gap: 0.3em 0;
-  // grid-auto-rows: minmax(50px, auto);
-}
-grid-container,
-.grid-container .grid-body::-webkit-scrollbar
-{
-  height: .4rem;
-}
-// grid-container,
-.grid-container .grid-body::-webkit-scrollbar-track
-{
-  background-color: transparent;
-}
-// grid-container,
-.grid-container .grid-body::-webkit-scrollbar-thumb
-{
-  background-color: rgba(172, 12, 12, 0.5);
-  border-radius: 5rem;
-}
-.grid-container .grid-header > div,
-.grid-container .grid-body .grid-content > div
-{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  border: black 1px solid;
-}
-.grid-container .grid-body .grid-content
+.grid-content
 {
   display: grid;
   grid-template-columns: 30px 150px 200px 150px 150px 150px;
   gap: 0 0.2em;
   cursor: pointer;
-}
-.grid-container .grid-body .grid-content:hover > div
-{
-  background-color:rgb(246, 246, 246);
 }
 .suspension::before
 {
@@ -90,42 +39,9 @@ grid-container,
   color: var(--red-color);
   transform: rotate(-10deg);
 }
-.grid-container .grid-body .grid-content > div.suspension
-{
-  position: relative;
-}
-.grid-container .grid-body .grid-content.grid-selected > div
-{
-  border: black 2px solid;
-  font-weight: 600;
-}
-.grid-container .grid-body .grid-content > div > div
-{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.grid-container .grid-body .grid-content > div > div~div
-{
-    border-top: 1px black solid;
-}
 /*** @media only screen ***/
 @media (max-width: 860px)
 {
-  .grid-container
-  {
-    grid-template-columns: 35px;
-    grid-template-rows: 1fr;
-    justify-items: stretch;
-    gap: 0 0.6em;
-    grid-template-areas:
-    "grid-header grid-body";
-    font-size: xx-small;
-    max-height: 360px;
-  }
   .grid-container .grid-header
   {
     grid-template-columns: 1fr;
@@ -142,21 +58,5 @@ grid-container,
     overflow-x: scroll;
     scroll-padding-top: 7rem;
     scroll-behavior: smooth;
-  }
-  .grid-container .grid-body .grid-content
-  {
-    grid-template-columns: 1fr;
-    grid-template-rows: 30px 60px 60px 60px 60px 60px;
-    gap: 0.2em 0;
-  }
-  .grid-container .grid-body .grid-content > div
-  {
-    flex-direction: row;
-    word-break: break-all;
-  }
-  .grid-container .grid-body .grid-content > div > div~div
-  {
-    border-top: 0;
-    border-left: 1px black solid;
   }
 }
