--- a/client/src/app/components/sidebar/sidebar.component.scss
+++ b/client/src/app/components/sidebar/sidebar.component.scss
@@ -51,15 +51,14 @@
     opacity: 0;
     transition: .5s;
 }
-.nav-item .nav-link.p-1::before
-{
-    left: 5%;
-    width: 70px;
-}
 .nav-item .nav-link:hover::before
 {
     bottom: 4px;
     opacity: 1;
+}
+.nav-item .nav-link.p-1:hover::before
+{
+    opacity: 0;
 }
 /*** @media only screen ***/
 @media (max-width: 767.99px)
@@ -100,11 +99,6 @@
     {
         border: white solid 1px;
     }
-    /*** Nav Link ***/
-    .nav-item .nav-link.p-1:hover::before
-    {
-        bottom: 1px;
-    }
 }
 @media (max-width: 575.99px)
 {
@@ -129,10 +123,5 @@
         z-index: 9999;
         top: 1.3%;
         right: 12%;
-    }
-    /*** Nav Link ***/
-    .nav-item .nav-link.p-1::before
-    {
-        width: 60px;
     }
 }
