--- a/client/src/app/components/work/work.component.html
+++ b/client/src/app/components/work/work.component.html
@@ -1,9 +1,3 @@
-<!-- Form -->
-<div class="container-lg border border-dark p-2 mt-2 mb-2">
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, nam.
-</div>
-<!-- /Form -->
-
 <!-- Grid Table -->
 <div class="grid-container" [ngStyle]="{'align-items': result_List.length > 5 ? 'stretch':'start'}">
   <div class="grid-header">
@@ -19,12 +13,10 @@
     <div>時間</div>
   </div>
   <div class="grid-body">
-    <!-- <div class="grid-body"
-    [ngStyle]="{'grid-template-rows': result_List.length ? 'repeat('+result_List.length+', 1fr)':'repeat(1, 1fr)'}"> -->
     <div *ngFor="let item of result_List; let i = index" (click)="user.e_Lv > 1 && choose(item)"
       [ngClass]="{'grid-content': true, 'grid-selected': item?.w_Id == fb_Value_Index[0]}"
-      [ngStyle]="{'grid-column': win_Size ? 'span '+item.w_Quantity.split(',').length : 'span 1'}">
-      <div>{{i+1}}</div>
+      [ngStyle]="{'grid-column': win_Size ? 'span '+(item.w_Quantity | splite:null:',').length : 'span 1'}">
+      <div>{{ item['id'] }}</div>
       <div>
         <span>
           {{ item.w_JobNumber }} {{ item.e_Name }}
@@ -41,38 +33,37 @@
         </span>
       </div>
       <div>
-        <div *ngFor="let val of item.w_Quantity.split(','); let y = index" wn>
+        <div *ngFor="let val of item.w_WorkOrder | splite:null:','; let y = index">
           <span>
-            {{ item.w_WorkOrder | splite:y }}
+            {{ val }}
           </span>
         </div>
       </div>
       <div>
-        <div *ngFor="let val of item.w_Quantity.split(','); let y = index" wn>
+        <div *ngFor="let val of item.w_Model | splite:null:','; let y = index">
           <span>
-            {{ item.w_Model | splite:y }}
+            {{ val }}
           </span>
         </div>
       </div>
       <div>
-        <div *ngFor="let val of item.w_Quantity.split(','); let y = index">
+        <div *ngFor="let val of item.w_Stand | splite:null:','; let y = index">
           <span>
-            {{ item.w_Stand | splite:y }}
-            <!-- {{ item.w_Stand | splite:y }} {{item.s_Title}} -->
+            {{ val }}
           </span>
         </div>
       </div>
       <div>
-        <div *ngFor="let val of item.w_Quantity.split(','); let y = index">
+        <div *ngFor="let val of item.w_Quantity | splite:null:','; let y = index">
           <span>
-            {{ item.w_Quantity | splite:y }}
+            {{ val }}
           </span>
         </div>
       </div>
       <div>
-        <div *ngFor="let val of item.w_Quantity.split(','); let y = index">
+        <div *ngFor="let val of item.w_Remark | splite:null:','; let y = index">
           <span>
-            {{ item.w_Remark | splite:y }}
+            {{ val }}
           </span>
         </div>
       </div>
@@ -126,10 +117,12 @@
 <!-- /Grid Table -->
 
 <!-- Pagination -->
-<div class="d-flex justify-content-center pagination pagination-sm mt-2">
-  <ngb-pagination [collectionSize]="result_Data.length" [(page)]="page" [pageSize]="pageSize" [maxSize]="100"
-    [rotate]="true" [boundaryLinks]="true" (pageChange)="refreshResult_List()"></ngb-pagination>
-</div>
+<ng-container *ngIf="result_Data.length > pageSize">
+  <div class="d-flex justify-content-center pagination pagination-sm mt-2">
+    <ngb-pagination [collectionSize]="result_Data.length" [(page)]="page" [pageSize]="pageSize" [maxSize]="100"
+      [rotate]="true" [boundaryLinks]="true" (pageChange)="refreshResult_List()"></ngb-pagination>
+  </div>
+</ng-container>
 <!-- /Pagination -->
 
 <ng-template #form_>
@@ -283,10 +276,10 @@
         <datalist [id]="'standtOptions'+i">
           <option *ngFor="let item of standList$ | async; index as i" [value]="item.s_Code"> {{item.s_Title}}
         </datalist> -->
-            <select id="lv" class="form-control form-control-sm text-center" [formControlName]="i"
+            <select class="form-control form-control-sm text-center" [formControlName]="i"
               (blur)="inputValidators(fbGroup, 'w_Stand')">
               <option *ngFor="let item of client_List$ | async;"
-                [value]="item.c_Stand_Code+','+item.c_Stand">
+                [value]="item.c_Stand_Code+' '+item.c_Stand">
                  {{ item.c_Stand_Code }} {{ item.c_Stand }}
               </option>
             </select>
